--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-monitor_speed=115200
+monitor_speed = 115200
+lib_deps = 
+    links2004/WebSockets@^2.4.1
